--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Androidware</string>
     <string name="thumbnail">Thumbs up!</string>
+    <string name="drawerOpen">Open!</string>
+    <string name="drawerClose">Close!</string>
 </resources>
